[package]
name = "oxirush-nas"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository  = "https://github.com/linouxis9/oxirush-nas/"
description = "oxirush-nas is a 5G NAS Message encoder/decoder library"

[features]
default = []
security = [] # ["dep:oxirush-security"]
serde = ["dep:serde"]

[dependencies]
bytes = "1.5"
byteorder = "1.5"
thiserror = "2.0.1"
log = "0.4"
hex = "0.4"
base64 = "0.22.1"
anyhow = "1.0.96"
paste = "1"

# Optional: NAS security envelope (integrity + ciphering)
# oxirush-security = { path = "../oxirush-security", optional = true }

# Optional: JSON serialization
serde = { version = "1", features = ["derive"], optional = true }
