[package]
name = "oxirush-nas"
version = "0.2.1"
edition = "2024"
description = "5G NAS (Non-Access Stratum) message encoder/decoder library per 3GPP TS 24.501"
keywords = ["5g", "nas", "3gpp", "telecom", "codec"]
categories = ["network-programming", "encoding", "parser-implementations"]
readme = "README.md"

[features]
default = []
security = ["dep:oxirush-security"]
serde = ["dep:serde"]

[dependencies]
bytes = "1.5"
byteorder = "1.5"
thiserror = "2.0.1"
log = "0.4"
hex = "0.4"
base64 = "0.22.1"
anyhow = "1.0.96"
paste = "1"

# Optional: NAS security envelope (integrity + ciphering)
oxirush-security = { version = "0.1.0", optional = true }

# Optional: JSON serialization
serde = { version = "1", features = ["derive"], optional = true }
